Added HTML decoding support using 'he' module. Now strings like "&#x3075;&#x305F;&#x308A;&#x306E;&#x7279;&#x5225;&#x6388;&#x696D;" show up as "ふたりの特別授業". Escaping is preserved.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "NodejsStarterApp",
+	"name": "Manga-End-Node.js-API-Wrapper",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -7,7 +7,8 @@
 	},
 	"dependencies": {
 		"express": "4.13.x",
-		"restler": "latest"
+		"restler": "latest",
+		"he": "latest"
 	},
 	"repository": {},
 	"engines": {
